--- a/views/edit.jade
+++ b/views/edit.jade
@@ -6,8 +6,8 @@ block content
       img(src='#{link}')
       p #{author}
 
-    form(method="POST" action="/edit_method=PUT")
-      input(type="submit" value="edit")
+    form(method="PUT" action="/edit_method?=PUT")
+      input(type="submit" value="EDIT")
 
-    form(action="/edit_method=DELETE" method="POST")
-      input(type="submit" value="delete")
+    form(action="/edit_method?=DELETE" method="DELETE")
+      input(type="submit" value="DELETE")
