making route changes to put and delete requests

--- a/views/pic_form.jade
+++ b/views/pic_form.jade
@@ -3,6 +3,7 @@ extends ./layout.jade
 block content
   body
     h1 New Photo
+    img(src='#{link}')
     form(action="/gallery" method="POST")
       input(type="text", name="author" value="Author")
       input(type="text", name="link" value="Link")
