--- a/views/login.jade
+++ b/views/login.jade
@@ -5,7 +5,7 @@ head
   title login
 body
   h1 Sign in
-    form(method="POST" action="/login")
+    form(method="POST" action="login")
       p username:
       input(type="text" name="username")
       p password:
