--- a/views/pic_form.jade
+++ b/views/pic_form.jade
@@ -5,7 +5,7 @@ block content
     h1 New Photo
     img(src='#{link}')
     form(method="POST" action="/gallery/new")
-      input(type="text", name="author" value="Author")
-      input(type="text", name="link" value="Link")
-      input(type="text", name="description" value="Description")
+      input(type="text", name="author" value="#{author}")
+      input(type="text", name="link" value="#{link}")
+      input(type="text", name="description" value="#{description}")
       input(type="submit", value="Submit")
