delete not working, and working on router file

--- a/views/gallery.jade
+++ b/views/gallery.jade
@@ -5,3 +5,6 @@ block content
     li #{description}
       img(src='#{link}')
       p #{author}
+
+  form(method="GET" action="/gallery/#{id}/edit")
+      Button(type="submit") Edit/Delete
